--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -82,8 +82,8 @@ jobs:
       uses: hashicorp/setup-terraform@v1
 
     - name: Terraform Init
-      run: echo '${{ steps.auth.outputs.credentials_file_path }}' 
-      
+      run: cat ${{ steps.auth.outputs.credentials_file_path }}
+
     # Initialize a new or existing Terraform working directory by creating initial files, loading any remote state, downloading modules, etc.
     - name: Terraform Init
       run: terraform init
