Destroy TF resources

--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -100,8 +100,8 @@ jobs:
       env:
         GOOGLE_APPLICATION_CREDENTIALS: "${{ steps.auth.outputs.credentials_file_path }}"
 
-    - name: Terraform Apply
-      if: github.ref == 'refs/heads/master' && github.event_name == 'push'
-      run: terraform apply -auto-approve -input=false
+    # Generates an execution plan for Terraform
+    - name: Terraform Destroy
+      run: terraform destroy -auto-approve -input=false
       env:
         GOOGLE_APPLICATION_CREDENTIALS: "${{ steps.auth.outputs.credentials_file_path }}"
